--- a/vignettes/vignette.Rmd
+++ b/vignettes/vignette.Rmd
@@ -125,9 +125,7 @@ profvis({
 })
 
 ```
-The lapply and the while-loop take the most time.
-These points can be optimized through the use of the parallelization method,
-which is implemented in the normal function.
+The lapply and the while-loop take the most time. These points can be optimized through the use of  parallelization, which is implemented in the regualar function (as the "*" exercise).
 
 
 ### Dynamic alogrithm
@@ -183,7 +181,7 @@ profvis({
 })
 
 ```
-As expected take the for-loops and the while-loop most of the computation time. Furthermore the sort() function is also time consuming. 
+As expected the for-loops and the while-loop take most of the computation time. Furthermore the sort() function is also time consuming. 
 
 ### System.time Dynamic algorithm comparison
 ```{r}
@@ -382,7 +380,7 @@ system.time({
 })
 
 ```
-Changed the while loop, memorizing the "which.max()" value instead of calling it three times, gaining a considerable improvement of run time.
+Changed the while loop, memorizing the "which.max()" value instead of calling it three times, gaining a considerable improvement of run time. \newline
 
 
 Question: What performance gain could you get by trying to improving your code? \newline
@@ -390,13 +388,6 @@ Hopefully a faster code.
 
 
 ## (*) Parallelize brute force search
-Question: What performance gain could you get by parallelising brute force search? \newline
-Speeding up the run time of the code.
-```{r}
-
-# system.time(brute_force_knapsack(x = knapsack_objects[1:12,], W = 2000))
-# system.time(brute_force_knapsack(x = knapsack_objects[1:12,], W = 2000, parallel = TRUE))
-
-```
-
+Question: What performance gain could you get by parallelizing brute force search? \newline
+Speeding up the run time of the code. However this is only the case when working with large datasets. In our case the dataset is too small, so the parallelized algorithm takes more time than the normal one. 
 
